@@ -103,7 +103,7 @@ Player::Player (shared_ptr<const Film> f, shared_ptr<const Playlist> p)
 	_playlist_changed_connection = _playlist->Changed.connect (bind (&Player::playlist_changed, this));
 	_playlist_content_changed_connection = _playlist->ContentChanged.connect (bind (&Player::content_changed, this, _1, _2, _3));
 	_film_changed_connection = _film->Changed.connect (bind (&Player::film_changed, this, _1));
-	set_video_container_size (_film->container()->size (_film->full_frame ()));
+	set_video_container_size (fit_ratio_within (_film->container()->ratio (), _film->full_frame ()));
 }
 
 void
@@ -256,7 +256,8 @@ Player::process_video (weak_ptr<Piece> weak_piece, shared_ptr<const Image> image
 
 	work_image = work_image->crop (content->crop(), true);
 
-	libdcp::Size const image_size = content->ratio()->size (_video_container_size);
+	float const ratio = content->ratio() ? content->ratio()->ratio() : content->video_size_after_crop().ratio();
+	libdcp::Size image_size = fit_ratio_within (ratio, _video_container_size);
 	
 	work_image = work_image->scale (image_size, _film->scaler(), PIX_FMT_RGB24, true);
 
