@@ -1,3 +1,7 @@
+2013-10-15  Carl Hetherington  <cth@carlh.net>
+
+	* Allow no-stretch scaling like in DVD-o-matic.
+
 2013-10-14  Carl Hetherington  <cth@carlh.net>
 
 	* Add Rec. 709 colour conversion preset using
